# tripforge-agentic-ai-app

./: .env.example  .gitignore  README.md  agent.py  main.py  models.py  prompts.py  pyproject.toml  readme.md
memory/: AGENTS.md
src/: cli.py  config.py  llm.py  models.py
src/agents/: factory.py  prompts.py
src/clients/: travel_api.py
src/graphs/: __init__.py  route_planning.py
src/rag/: store.py
src/storage/: artifacts.py
src/tools/: clarify.py  planner.py  research.py
tests/: test_models.py
tools/: __init__.py  geocode.py  poi.py  weather.py
