[project]
name = "pet-project-agentic-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.3",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
